# healthNER

./: README.md  README.txt
Bidirectional_LSTM-CRF/: README.md  fixGlove.py  loader.py  unificationOfEmbeddings.py
Bidirectional_LSTM-CRF/data_DNR/: vv.txt.txt
Bidirectional_LSTM-CRF_plus_feature_engineering/: README.md  loader.py  model.py  train_loop_pre_emb.py
Bidirectional_LSTM-CRF_plus_feature_engineering/data_DNR/DrugBank/: test_plus_features.txt  train_plus_features.txt
Bidirectional_LSTM-CRF_plus_feature_engineering/data_DNR/MedLine/: dev_plus_features.txt  test_plus_features.txt  train_plus_features.txt
CRF/: README.md
CRF/HCRF2.0b/testHCRF/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.txt  cmake_install.cmake  features.txt  gmon.out  hcrfTest  testHCRF.vcproj
CRF/HCRF2.0b/testHCRF/hCRF/: cmake_install.cmake
CRF/HCRF2.0b/testHCRF/hCRF/cgdescent/: Makefile  cmake_install.cmake
CRF/HCRF2.0b/testHCRF/include/: resource.h
CRF/HCRF2.0b/testHCRF/src/: main.cpp  testHCRF.rc
CRF/data_preparation/src/: data_CRF_file_creation.py  data_conll_preparation.py  data_preparation_conll.py  foo.txt  print_mappings.py  tag_CRF_file_creation.py
LSTM/: averageOfEmbeddings.py  evaluateModel.py  model.py  obtainVocabSizes.py  train.py  utils.py
LSTM/data_DNR/DrugBank/NER/: test.txt  (+1 more)
LSTM_plus_feature_engineering/: train.py  train_loop.py  utils.py
LSTM_plus_feature_engineering/data_CCE/CCE/: dev_plus_features.txt  train_plus_features.txt
LSTM_plus_feature_engineering/data_DNR/DrugBank/: dev_plus_features.txt
data_DNR/MedLine/NER/: test.txt  train.txt
(+8 files in other folders)
